+ added
- removed
* bug fix
% change

Version 0.4.0, June 5, 2024
        % updated files, filenames, and added AGPL 3.0 license
        thanks to Artifex Ghostscript's enscript making this subject
        to it
        % ported `freecheck` from Perl to Python
        % removed old CGI program
        % updated documentation
        + freecheck.py: freecheck.cfg is now TOML-format, freecheck.toml

Version 0.30.1, March 11, 2O14
        + packaged for Archlinux
        + began process of updating decade old program
        + added installer
        % move config file to user directory


Version 0.3, October 15, 2002
        + Support for multiple check layouts.
        + Quicken/QuickBooks compatible check layouts.
        + EPS logo support
        + New check blank definitions, MVD3003 and MVP3001.
        + PostScript string substitution proc
        % modified FixMICR to use new string substitution proc
        * fixed bug where defaults would override the command line
        * fixed bug where ShowAndCR would leave arguments on the stack
        * modified some loops to use repeat since they where not
          using the index number that was being pushed on the stack by
          'for' and were not popping it off either.


Version 0.21, August 12, 2000
        % Changed the way the MICR line is generated & entered
          (See the freecheck.cfg file for details - it's changed)
          Previous algorithm was not flexible enough to generate
          many MICR lines out there.  Should now handle all cases.
        + Added MICR line error checking - routing number checksum, etc.
          (Disabled with --test option)

Version 0.2, July 22, 2000
        + Added error checking for nonexistant acct/style/blank
        + Added options to show available accts/styles/blanks
        + Added centimeter ("cm") def - dims can now be in cm
        % Changed style section definition a bit (no "CheckHeight mul")