@@ -17,71 +17,71 @@
 % Anything else will be passed through unchanged.
 
 % Globals
-MICRFontName            /value
-MICRFontSize            {value}
-TransitSymbol           (value)
-OnUsSymbol              (value)
-AmountSymbol            (value)
-DashSymbol              (value)
-MICRVerTweak            {value}
-MICRHorTweak            {value}
+MICRFontName		/value
+MICRFontSize		{value}
+TransitSymbol		(value)
+OnUsSymbol		(value)
+AmountSymbol		(value)
+DashSymbol		(value)
+MICRVerTweak		{value}
+MICRHorTweak		{value}
 % Account
-CheckNumber             {value}
-PrintCheckBody          {value}
-PrintMICRLine           {value}
-NumPages                {value}
-Name1                   (value)
-Name2                   (value)
-Address1                (value)
-Address2                (value)
-CityStateZip            (value)
-PhoneNumber             (value)
-BankName                (value)
-BankAddr1               (value)
-BankAddr2               (value)
-BankCityStateZip        (value)
-AuxOnUs                 (value)
-Routing                 (value)
-OnUs                    (value)
-Fraction                (value)
-PrintVOID               {value}
+CheckNumber		{value}
+PrintCheckBody		{value}
+PrintMICRLine		{value}
+NumPages		{value}
+Name1			(value)
+Name2			(value)
+Address1		(value)
+Address2		(value)
+CityStateZip		(value)
+PhoneNumber		(value)
+BankName		(value)
+BankAddr1		(value)
+BankAddr2		(value)
+BankCityStateZip	(value)
+AuxOnUs			(value)
+Routing			(value)
+OnUs			(value)
+Fraction		(value)
+PrintVOID		{value}
 % Styles
-CheckLayout             /value
-StandardFontName        /value
-StandardFontSize        {value}
-BoldFontName            /value
-BoldFontSize            {value}
-CheckNumDigits          {value}
-CheckNumFontName        /value
-CheckNumFontSize        {value}
-FractionFontName        /value
-FractionFontSize        {value}
-Underline               {value}
-LineWidth               {value}
-MemoLineHeight          {value}
-SignatureLineHeight     {value}
-BankInfoHeight          {value}
-AmountLineHeight        {value}
-PayeeLineHeight         {value}
-DateLineHeight          {value}
-LogoFile                (value)
-LogoWidth               {value}
-LogoHeight              {value}
-LogoPadding             {value}
-LogoBorder              {value}
-LogoBBox                [value]
-BankLogoFile            (value)
-BankLogoWidth           {value}
-BankLogoHeight          {value}
-BankLogoPadding         {value}
-BankLogoBorder          {value}
-BankLogoBBox            [value]
+CheckLayout		/value
+StandardFontName	/value
+StandardFontSize	{value}
+BoldFontName		/value
+BoldFontSize		{value}
+CheckNumDigits		{value}
+CheckNumFontName	/value
+CheckNumFontSize	{value}
+FractionFontName	/value
+FractionFontSize	{value}
+Underline		{value}
+LineWidth		{value}
+MemoLineHeight		{value}
+SignatureLineHeight	{value}
+BankInfoHeight		{value}
+AmountLineHeight	{value}
+PayeeLineHeight		{value}
+DateLineHeight		{value}
+LogoFile		(value)
+LogoWidth		{value}
+LogoHeight		{value}
+LogoPadding		{value}
+LogoBorder		{value}
+LogoBBox		[value]
+BankLogoFile		(value)
+BankLogoWidth		{value}
+BankLogoHeight		{value}
+BankLogoPadding		{value}
+BankLogoBorder		{value}
+BankLogoBBox		[value]
 % Check Blank Types
-CheckHeight             {value}
-CheckWidth              {value}
-CheckHorOffset          {value}
-CheckVerOffset          {value}
-ChecksPerPage           {value}
-LeftMargin              {value}
-RightMargin             {value}
-TopMargin               {value}
+CheckHeight		{value}
+CheckWidth		{value}
+CheckHorOffset		{value}
+CheckVerOffset		{value}
+ChecksPerPage		{value}
+LeftMargin		{value}
+RightMargin		{value}
+TopMargin		{value}
