@@ -1,8 +1,6 @@
 % This is the main body of the postscript file, that acts on all of the
 % definitions we got from the config file.
 
-%%EndProlog
-
 % Available Check Layouts
 /CheckLayoutDict <<
     /Original { DrawOriginalCheckBody }
@@ -1018,6 +1016,3 @@ NumPages { % repeat
 	/CheckNumber CheckNumber ChecksPerPage add def
 	/CurrentPage CurrentPage 1 add def
 } repeat
-end % userdict
-end % forms_ops
-%%EOF
